objects/is2SalesFunnel__ISConfiguration__c.object
<CustomObject>
    <description>Configuration settings for the InsightSquared Sales Funnel</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is2SalesFunnel__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is2SalesFunnel__Valuetext__c</fullName>
        <label>ValueText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ISConfiguration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISConfigurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>